main page on mobile fixes

--- a/css/style.css
+++ b/css/style.css
@@ -97,32 +97,6 @@ html {
     list-style: none;
   }
 
-  /* Mobile menu styles */
-  .menu-toggle {
-    display: none;
-    cursor: pointer;
-    padding: 10px;
-    z-index: 9999; /* Ensure it's on top of other elements */
-    margin-bottom: 3px;
-}
-
-#hamburger img {
-    width: 100%;
-    height: auto;
-}
-
-#menu.show {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 15%; 
-  right: 0;
-  background-color: #f9f9f9;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
 body.is-preload #header {
   -moz-filter: none;
   -webkit-filter: none;
@@ -162,10 +136,7 @@ body.is-preload #header {
     letter-spacing: 0.2rem;
     font: inherit;
 }
-    h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-        color: inherit;
-        text-decoration: none;
-    }
+
     h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
         border-bottom: solid 1px #ffffff;
         width: -moz-max-content;
@@ -217,11 +188,20 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  flex-direction: column;
 }
 
 .short-info {
   display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.info {
+  margin-top: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
 }
 
 .details {
@@ -379,4 +359,43 @@ textarea {
     width: 10vw;
     height: 10vw;
   }
+
+  .short-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .info {
+    width: 100%;
+  }
+
+}
+
+  /* Mobile menu styles */
+
+  .menu-toggle {
+    display: none;
+    cursor: pointer;
+    padding: 10px;
+    z-index: 9999; /* Ensure it's on top of other elements */
+    margin-bottom: 3px;
+}
+
+#hamburger img {
+    width: 100%;
+    height: auto;
+}
+
+#menu.show {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 15%; 
+  right: 0;
+  background-color: #f9f9f9;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
